# StrategyGameEngine

./: .gitignore  CMakeLists.txt
Editor/: CMakeLists.txt  Editor.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Editor/EditorTemplates/: EditorTemplateManager.cpp  EditorTemplateManager.h
Editor/QtDebug/: Editor
Editor/ui/: maptiledisplay.cpp  maptiledisplay.h  maptiledisplay.ui
GameCore/: CMakeLists.txt  main.cpp
GameCore/Texture/: Texture.h  TextureManager.cpp  TextureManager.h
GameData/: CMakeLists.txt  ReadTest.cpp  SaveTest.cpp
GameData/GameElements/: BasicElement.cpp  BasicElement.h
GameData/GameElements/Army/: Army.cpp  Army.h
GameData/GameElements/Map/: Map.cpp  Map.h  MapTile.cpp  MapTile.h
GameData/GameElements/Modules/: Module.cpp  Module.h
GameData/GameElements/Sprite/: Sprite.cpp  Sprite.h
GameData/GameElements/Unit/: Unit.cpp  Unit.h
GameData/Math/: AABB.cpp  AABB.h  Vector2D.cpp  Vector2D.h
GameData/SDL/: SDLContext.cpp  SDLContext.h
GameData/TemplateManager/: BaseTemplateManager.cpp  BaseTemplateManager.h  TemplateManager.cpp  TemplateManager.h
GameData/TemplateManager/IndividualManagers/: ArmyManager.cpp  ArmyManager.h  MapManager.cpp  MapManager.h  ModuleManager.cpp  ModuleManager.h  SpriteManager.cpp  SpriteManager.h  TerrainManager.cpp  TerrainManager.h  TextureManager.cpp  TextureManager.h  UnitManager.cpp  UnitManager.h
GameData/Texture/: Texture.cpp  Texture.h
GameData/Unit/: Unit.cpp  Unit.h
externalDeps/LuaBridge/: LuaBridge.h
