cmake_minimum_required(VERSION 3.6)
project(StrategyGame)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin/Game")

INCLUDE(FindPkgConfig)
find_package(Lua 5.2 REQUIRED)
find_package(Boost COMPONENTS filesystem REQUIRED)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
PKG_SEARCH_MODULE(SDLMIXER2 REQUIRED SDL2_mixer)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ./externalDeps ./GameData . ${LUA_INCLUDE_DIR} ${SDLMIXER2_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

add_subdirectory(GameData/)
add_subdirectory(GameCore/)
add_subdirectory(Editor/)